Revision history for Modern::Perl

{{$NEXT}}

1.20200211 2020-02-10 19:33:55-08:00 America/Los_Angeles
    - bash doesn't like !' in double quotes, so it stuck up for awk

1.20200201 2020-01-31 18:41:36-08:00 America/Los_Angeles
    - fix tests for Perl 5.32 (Tony Cook, RT #131608)
    - update for 2020

1.20190727 2019-07-27 12:15:27-07:00 America/Los_Angeles
    - remove explicit autodie dependency (GH #11, gordon-fish, mst, #perl)
    - add description of odern::Perl module (Utkarsh Gupta, Debian, GH issue #12)

1.20190601 2019-06-01 09:19:36-07:00 America/Los_Angeles
    - update for 2019
    - reduce scope of lexical %dates (RT #128406)
    - support `perl -Modern::Perl=20xx` (RT #96319)

1.20181021 2018-10-21 12:09:32-07:00 America/Los_Angeles
    - autogenerate META.json file (Mohammad S Anwar, GH PR #7)
    - remove Module::Build build dependency to make installation easier

1.20180928 2018-09-27 18:29:25-07:00 America/Los_Angeles
    - skip tests for Perls without arraybase (Dagfinn Ilmari Mannsåker, GH #10)

1.20180901 2018-09-01 12:19:53-07:00 America/Los_Angeles
    - skip tests when PERL5OPT is set (David Precious, GH #9)

1.20180701 2018-07-01 10:34:32-07:00 America/Los_Angeles
    - added support for Perl 5.26 and 5.28

1.20170117 2017-01-16 20:37:12-08:00 America/Los_Angeles
    - cleaned up test suite
    - fixed Perl 5.25 failures (RT #114690)

1.20170116 2017-01-16 08:46:50-08:00 America/Los_Angeles
    - updated for 2017 release
    - maybe 2016 should have supported 5.22, but given how long I waited... oops
    - improved documentation about reexporting (RT #109076)

1.20161229 2016-12-28 16:02:17-08:00 America/Los_Angeles
    - improved VERSION numbering (Gryphon Shafer, GH #5)

1.20161005 2016-10-05 09:38:21-07:00 America/Los_Angeles
    - updated for 2016 release (Gryphon Shafer)
    - added support for 5.24

1.20150127 2015-01-26 23:21:44-08:00 America/Los_Angeles
    - updated for 2015 release (Elmer Quintanilla)